public/style.css
@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');

*,
*::after,
*::before {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-size: 24px;
    scroll-behavior: smooth;
    scroll-behavior: smooth;
    font-family: "Teko", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

body {
    overflow: visible;
    width: 100dvw;
    height: 100dvh;
    color: #edf2f4;
    background-color: #001d3d;
}

.nav {
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.links ul {
    display: flex;
    justify-content: center;
    gap: 20px;
}

a {
    color: #edf2f4;
    text-decoration: none;
}

li {
    list-style: none;
}

.messagesWrap {
    padding: 1rem;
    width: 100dvw;
    overflow: hidden;
}

.title {
    display: flex;
    justify-self: center;
    align-content: center;
}

.contentWrap {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: .7rem;
}

.cardWrap {
    display: flex;
    justify-content: center;
    height: 550px;
    overflow-y: scroll;
}

.messageCard {
    width: 50dvw;
    padding: 1rem 1rem .3rem 0;
    border-bottom: 2px solid #fefefe;
}

.userTime {
    padding: .5rem;
}

.userTime h1 {
    text-shadow: 0 0 15px #fefefe;
    font-size: 34px;
}

.userTime p {
    font-size: 16px;
}

.content p{
    padding: .5rem;
    font-size: 28px;
}

.formWrap {
    background-color: #001d3d;
}

.footerWrap {
    position: absolute;
    bottom: 0;
    width: 100dvw;
    padding: .4rem;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    flex-wrap: wrap;
}

.footer img {
    width: 48px;
    object-fit: fill;
    filter: invert();
}

